--- a/report/project_report.Rmd
+++ b/report/project_report.Rmd
@@ -514,11 +514,12 @@ The table below compares the 6 models built with all 12 predictors. We can see t
 ```{r, echo = FALSE}
 # create table
 table_df <- data.frame(Method = c("Proportional Odds", "OrdinalNet", "Random Forest", "Ordinal Forest", "RF Downsample", "OF Downsample"), 
-                       `Training Set Size` = c(rep(75887,4), rep(3243, 2)), 
+                       Training_Set_Size = c(rep(75887,4), rep(3243, 2)), 
                        Accuracy = c(0.903, .903, .904, .904, 0.887, 0.886), 
                        Kappa = c(0.659, 0.662, 0.6696, 0.675, 0.661, 0.660), 
                        Time = c("1.7 minutes", "5.4  minutes", "11.5 minutes", "1.5 hours", "24 seconds", "7 minutes"))
-knitr::kable(table_df, align = 'ccccc', caption = "Model Performance",  booktabs = TRUE) %>%
+knitr::kable(table_df, align = 'ccccc', caption = "Model Performance",  booktabs = TRUE,
+             col.names = c("Method", "Training Set Size", "Accuracy", "Kappa", "Time")) %>%
 kable_styling(latex_options = c("repeat_header", "scale_down"))
 ```
 
@@ -626,11 +627,12 @@ The table below compares the 3 models built exploring the Source Predictor. We c
 ```{r, echo = FALSE}
 # create table  
 table_df <- data.frame(Method = c("Full Data No Source", "MapQuest Data", "Bing Data"), 
-                       `Training Set Size` = c(75887, 59538, 15518), 
+                       Training_Set_Size = c(75887, 59538, 15518), 
                        Accuracy = c(0.875, .924, .592), 
                        Kappa = c(0.510, 0.732, 0.0795), 
                        Time = c("12 minutes", "8  minutes", "2 minutes"))
-knitr::kable(table_df, align = 'ccccc', caption = "Performance for Source Specific Random Forest Models", booktabs = TRUE) %>%
+knitr::kable(table_df, align = 'ccccc', caption = "Performance for Source Specific Random Forest Models", booktabs = TRUE, 
+             col.names = c("Method", "Training Set Size", "Accuracy", "Kappa", "Time")) %>%
 kable_styling(latex_options = c("repeat_header", "scale_down"))
 ```
 
